change to radians

--- a/fps.html
+++ b/fps.html
@@ -8,7 +8,7 @@
 <canvas id='display' width='1' height='1' style='width: 100%; height: 100%;' />
 
 <script>
-
+//circle in radians
 var CIRCLE = Math.PI * 2;
 var MOBILE = /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent)
 
